tests/NormalTests/paczka1/fuzzy1/99244786.err
Error in line 13: 1DxgbA A564 8,5
Error in line 16: gZZGdN A245 68,7
Error in line 8: IzX A245 98,8
Error in line 29: gZZGd S526 10,3
